# syncode

./: Cargo.toml  Helias_modules.md  LICENSE  ModuleGuide.md  README.md  mds.md  module_command_parser.md  syncode_dvcs_mds.md  syncode_dvcs_mds_part_d.md  syncode_test_res.csv  syncode_test_results.csv
.dvcs/: repo.json
.dvcs/0f918d72-c926-49f6-9f9f-c3f25bc2116c/: rev.json
.dvcs/2b43a50184ee45fd9851eb97fd857d03/: rev.json
.dvcs/36b8d8e7-7e2c-48a4-b572-de66dc89b851/: rev.json
.dvcs/4df1e521-3f69-4300-b979-25f704616cba/: rev.json  try.txt
.dvcs/7625ecf963814071858268dae5796209/: rev.json
.dvcs/a39e4a3d-9397-47be-b611-8fe6ec850490/: rev.json
.dvcs/ab38af3b7ed641b3bee7b044adeeb9a4/: rev.json
.dvcs/b474b3852bec43db82dd12dcf75eb89b/: rev.json
.dvcs/da6eeda3ca2a40f0898edb69e73fa0b5/: rev.json
src/: cli.rs  errors.rs  main.rs  repository.rs  utils.rs
src/machine_hiding/: mod.rs
src/machine_hiding/file_system_operations/: mod.rs
src/machine_hiding/network_operations/: mod.rs
src/repository_hiding/: mod.rs
src/repository_hiding/initialization/: mod.rs
src/repository_hiding/inspection/: mod.rs
src/repository_hiding/staging/: mod.rs
src/repository_hiding/synchronization/: mod.rs
src/user_hiding/: mod.rs
src/user_hiding/authentication_manager/: mod.rs
src/user_hiding/command_parser/: mod.rs
src/user_hiding/syntax_checker_error_handling/: mod.rs
test1_repo/.dvcs/: repo.json
test_push/.dvcs/: repo.json
test_repo/: merge_test.txt
test_repo/.dvcs/: repo.json
test_repo4/.dvcs/: repo.json
test_repo6/.dvcs/: repo.json
(+12 files in other folders)
