[package]
name = "dvcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.11"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
#uuid = { verson = "1.6.1", features = ["serde", "v4"] }
uuid = { version = "1.6.1", features = ["serde", "v4", "v5"] }
