[package]
name = "syncode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.11"

serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
uuid = { version = "1.6.1", features = ["serde", "v4", "v5"] }
